rewrite of the drinkconfig related api/database
