# src/domains/drinkconfig/drinkconfig.dto.ts
@@ -4,7 +4,8 @@ import { DrinkConfigDTO } from './types';
 export const toDrinkConfigDTO = async (
   drinkConfig: IDrinkConfig,
 ): Promise<DrinkConfigDTO> => ({
-  dispenserId: drinkConfig.id,
   ingredient: drinkConfig.ingredient ? drinkConfig.ingredient.id : null,
   amountLeft: drinkConfig.amountLeft,
+  machineId: drinkConfig.serialNumber,
+  hopperNum: drinkConfig.hopperNum,
 });
