# src/domains/drinkconfig/types.ts
@@ -1,5 +1,6 @@
 export type DrinkConfigDTO = {
-  dispenserId: number;
   ingredient: number;
   amountLeft: number;
+  machineId: number;
+  hopperNum: number;
 };
