# src/entities/drink-config.entity.ts
@@ -1,5 +1,5 @@
 import {
-  Entity, Column, PrimaryColumn, OneToOne, JoinColumn,
+  Entity, Column, OneToOne, JoinColumn, PrimaryGeneratedColumn,
 } from 'typeorm';
 import { Ingredient } from './ingredient.entity';
 
@@ -7,11 +7,13 @@ export interface IDrinkConfig {
   id: number;
   ingredient: Ingredient;
   amountLeft: number;
+  serialNumber: number;
+  hopperNum: number;
 }
 
 @Entity('drink_config')
 export class DrinkConfig implements IDrinkConfig {
-  @PrimaryColumn({ name: 'id' })
+  @PrimaryGeneratedColumn({ name: 'id' })
     id: number;
 
   @OneToOne(() => Ingredient)
@@ -20,4 +22,10 @@ export class DrinkConfig implements IDrinkConfig {
 
   @Column({ name: 'amount_left' })
     amountLeft: number;
+
+  @Column({ name: 'serial_number' })
+    serialNumber: number;
+
+  @Column({ name: 'hopper_num' })
+    hopperNum: number;
 }
