# src/routes/drinkconfig/validation/done.validation.ts
@@ -1,9 +1,9 @@
 import validationMiddleware from '@root/utils/validationMiddleware';
 import { z } from 'zod';
 
-export const putValidation = validationMiddleware(z.object({
-  machineId: z.number().int(),
-  dispenserId: z.number().int(),
+const drinkConfigSchema = z.object({
   ingredientId: z.number().nullable(),
   amountLeft: z.number().int(),
-}));
+});
+
+export const drinkConfigsValidation = validationMiddleware(z.array(drinkConfigSchema));
